--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html ng-app="AppAngularJS">
-<head>
-    <title>AppAngularJS</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <link rel="icon" type="image/png" href="assets/images/favicon.png"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:700|PT+Sans:400,400i,700,700i" rel="stylesheet"/>
+    <head>
+        <title>Summoner War</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        <link rel="icon" type="image/png" href="assets/FaviconSW.jpg"/>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:700|PT+Sans:400,400i,700,700i" rel="stylesheet"/>
+    <header>
+        <div id="mainContainer">
+            <div class="container">
+                <div ui-view="headerView"></div>
+            </div></div>
+    </header>
 </head>
 
 <body>
-
-<div id="mainContainer" class="content">
-    <div class="container">
-        Mon application AngularJS
+    <div id="mainContainer">
+        <div class="container">
+            <div ui-view="contentView"></div>
+        </div>
     </div>
-</div>
-
 </body>
+<footer>
+    <div id="mainContainer">
+        <div class="container">
+            <div ui-view="footerView"></div>
+        </div>
+    </div>
+</footer>
 </html>
